prevent scrollbar on body/html

--- a/_attachments/style/style.css
+++ b/_attachments/style/style.css
@@ -1,6 +1,7 @@
 html, body, #map, #mapdiv, #detailmap {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #mapdiv {
